--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "url": "git://github.com/sendgrid/sendgrid-nodejs.git"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.0.1",
     "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
@@ -25,6 +23,7 @@
     "typescript": "~2.4.2"
   },
   "scripts": {
+    "build1": "babel packages --out-dir dist",
     "lint": "eslint . --fix",
     "prism:install": "curl https://raw.githubusercontent.com/stoplightio/prism/master/install.sh | sh",
     "prism": "prism run --mock --list --spec https://raw.githubusercontent.com/sendgrid/sendgrid-oai/master/oai_stoplight.json",
@@ -54,7 +53,12 @@
     "chai": "^4.0.1",
     "esdoc": "^1.0.3",
     "esdoc-coverage-plugin": "^1.1.0",
-    "esdoc-type-inference-plugin": "^1.0.1"
+    "esdoc-type-inference-plugin": "^1.0.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0"
   },
   "author": "SendGrid"
 }
